Fixed alignment in buttons.

--- a/src/components/EntryText/EntryText.module.scss
+++ b/src/components/EntryText/EntryText.module.scss
@@ -40,6 +40,4 @@
 
 .buttons {
   margin-top: 2rem;
-  padding: 0.3rem;
-  padding-left: 1rem;
 }
