--- a/src/templates/Introduction/Introduction.module.scss
+++ b/src/templates/Introduction/Introduction.module.scss
@@ -4,7 +4,6 @@
 .container {
   display: grid;
   width: 100%;
-  overflow: hidden;
   grid-template:
     'logo followMe' 6rem
     '. boat' 15rem
